filter ui improved

--- a/xcode/N46Collection/zh-Hans.lproj/Localizable.strings
+++ b/xcode/N46Collection/zh-Hans.lproj/Localizable.strings
@@ -6,4 +6,50 @@
   Copyright © 2020 Jiacheng Sun. All rights reserved.
 */
 
-"Hello" = "你好";
+"メンバー" = "成员";
+"ニュース" = "新闻";
+"フィルタ" = "过滤器";
+"ニュース" = "新闻";
+
+"並べ替え" = "排序方式";
+"順序" = "顺序";
+"年齢" = "年龄";
+"五十音順" = "五十音";
+"低い順番" = "从低到高";
+"高い順番" = "从高到低";
+"メンバーラベル" = "成员类别";
+"メンバーカラー" = "应援色";
+"全部カラー" = "所有颜色";
+
+"1期生" = "1期生";
+"2期生" = "2期生";
+"3期生" = "3期生";
+"4期生" = "4期生";
+"交換留学生" = "交换留学生";
+"選抜メンバー" = "选拔成员";
+"十一福神" = "十一福神";
+"アンダー" = "Under";
+"キャプテン" = "队长";
+"現メンバー" = "现役成员";
+"元メンバー" = "毕业成员";
+"全部メンバー" = "全部成员";
+"元" = "元";
+
+"誕生日" = "生日";
+"血液型" = "血型";
+"星座" = "星座";
+"身長" = "身高";
+
+"みずがめ座" = "水瓶座";
+"うおざ座" = "双鱼座";
+"おひつじ座" = "白羊座";
+"おうしざ座" = "金牛座";
+"ふたご座" = "双子座";
+"かに座" = "巨蟹座";
+"しし座" = "狮子座";
+"おとめ座" = "处女座";
+"てんびん座" = "天枰座";
+"さそり座" = "天蝎座";
+"いて座" = "射手座";
+"やぎ座" = "摩羯座";
+
