added order information

--- a/xcode/N46Collection/zh-Hans.lproj/Localizable.strings
+++ b/xcode/N46Collection/zh-Hans.lproj/Localizable.strings
@@ -6,11 +6,13 @@
   Copyright © 2020 Jiacheng Sun. All rights reserved.
 */
 
+// MARK: - TabView
 "メンバー" = "成员";
 "ニュース" = "新闻";
 "フィルタ" = "过滤器";
 "歌曲" = "歌曲";
 
+// MARK: - FilterView
 "並べ替え" = "排序方式";
 "順序" = "顺序";
 "年齢" = "年龄";
@@ -21,6 +23,8 @@
 "メンバーカラー" = "应援色";
 "全部カラー" = "所有颜色";
 
+
+// MARK: - MemberView
 "1期生" = "1期生";
 "2期生" = "2期生";
 "3期生" = "3期生";
@@ -52,4 +56,18 @@
 "さそり座" = "天蝎座";
 "いて座" = "射手座";
 "やぎ座" = "摩羯座";
+
+// MARK: - SongView
+"シングル" = "单曲";
+"配信シングル" = "配信单曲";
+"アルバム" = "专辑";
+"ベストアルバム" = "精选专辑";
+"すべて見る" = "全部查看";
+"センター" = "Center";
+"福神" = "福神";
+"選抜" = "选拔";
+"アンダー" = "Under";
+"アンダー" = "Under";
+"収録楽曲" = "收录歌曲";
+
 
